<resources>
    <string name="app_name">AboutTravel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_home" translatable="false">HomeActivity</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="Home" translatable="false">Home</string>
    <string name="Share">Share</string>
    <string name="Profile">Profile</string>
    <string name="My_Travels">My Travels</string>
    <string name="Login">Login</string>
    <string name="Name">Name:</string>
    <string name="Password">Password:</string>
    <string name="Enter">Enter</string>
    <string name="Dont_have_account">Don\'t have an account:</string>
    <string name="Register">Register</string>
    <string name="Email" translatable="false">Email:</string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="Already_Have_Account">Already have an account:</string>
    <string name="profile">Profile</string>
    <string name="Username">Username:</string>
    <string name="Description">Description:</string>
    <string name="Number">Number:</string>
    <string name="My_Shared">Shared with me</string>
    <string name="CreateTravel">Adding travel</string>
    <string name="InitialDate">Initial date:</string>
    <string name="FinalDate">Final Date:</string>
    <string name="Localization">Localization:</string>
    <string name="Classification">Classification:</string>
    <string name="Definition">Definition</string>
    <string name="Sobrenos">About us</string>
    <string name="Language">Language</string>
    <string name="AssociatedAccount">Associated account</string>
    <string name="Logout">Logout</string>
    <string name="AddImage">Add Image:</string>
    <string name="Next">Next</string>
    <string name="intro_1_text">If you like to travel, this app is for you.</string>
    <string name="intro_2_text">Save your memories while you travel.</string>
    <string name="intro_3_text">Share with your friends.</string>
    <string name="Welcome">Welcome</string>
    <string name="no_wifi">No conection</string>
    <string name="selected_item">Selected Item</string>
    <string name="date_error">The end date must be after the start date!</string>
    <string name="field_required">Required field!</string>
    <string name="AboutUs">About Us</string>
    <string name="WorkBy">Work Done by:</string>
    <string name="GonçaloFonte" translatable="false">Gonçalo Fonte</string>
    <string name="JoaoRocha" translatable="false">João Rocha</string>
    <string name="HugoGuedes" translatable="false">Hugo Guedes</string>
    <string name="Back">Back</string>
    <string name="English">English</string>
    <string name="Portuguese">Portuguese</string>
    <string name="fill_fields_error" translatable="false">Please fill in all fields!</string>
    <string name="invalid_credentials_error" translatable="false">Invalid credentials</string>
    <string name="Select_Country" translatable="false">Select Country</string>
    <string name="CreatePlaces">Add Place</string>
</resources>