<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".pages.authentication.LoginFragment">

    <!--<ImageView
        android:id="@+id/image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo/LOGO - ABOUT TRAVEL_Prancheta 1-01"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="8dp" />-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:text="@string/Login"
        android:textSize="40sp"
        />

    <EditText
        android:id="@+id/nameField"
        android:layout_width="260dp"
        android:layout_height="56dp"
        android:hint="@string/Name"
        android:textSize="20sp"
        android:paddingStart="8dp"
        android:background="@color/grey"
        android:elevation="4dp"
        android:layout_marginBottom="12dp"
        />

    <EditText
        android:id="@+id/passField"
        android:layout_width="260dp"
        android:layout_height="56dp"
        android:hint="@string/Password"
        android:textSize="20sp"
        android:paddingStart="8dp"
        android:background="@color/grey"
        android:elevation="4dp"
        android:layout_marginBottom="12dp"
        />

    <Button
        android:id="@+id/buttonLoginToHome"
        android:layout_width="200dp"
        android:layout_height="56dp"
        android:text="@string/Enter"
        android:textSize="28sp"
        android:backgroundTint="@color/blue"
        android:layout_marginBottom="12dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="-4dp"
            android:text="@string/Dont_have_account" />

        <Button
            android:id="@+id/button_login_to_register"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/white"
            android:paddingLeft="8dp"
            android:text="@string/Register"
            android:textColor="@color/hardBlue" />

    </LinearLayout>

</LinearLayout>
